@@ -1,15 +1,34 @@
 package org.openprojectx.bigdata.test.example.spark
 
+import io.confluent.kafka.serializers.KafkaAvroSerializer
+import org.apache.avro.Schema
+import org.apache.avro.generic.GenericData
+import org.apache.avro.generic.GenericRecord
+import org.apache.hadoop.conf.Configuration
 import org.apache.hadoop.fs.FileSystem
 import org.apache.hadoop.fs.Path
+import org.apache.hadoop.security.alias.CredentialProviderFactory
+import org.apache.kafka.clients.admin.AdminClient
+import org.apache.kafka.clients.admin.NewTopic
+import org.apache.kafka.clients.producer.KafkaProducer
+import org.apache.kafka.clients.producer.ProducerConfig
+import org.apache.kafka.clients.producer.ProducerRecord
+import org.apache.kafka.common.errors.TopicExistsException
+import org.apache.kafka.common.serialization.StringSerializer
 import org.apache.spark.sql.SparkSession
-import java.net.URI
-import java.nio.file.Files
 import org.junit.jupiter.api.Test
 import org.openprojectx.bigdata.test.core.BigDataService
 import org.openprojectx.bigdata.test.core.BigDataTestKit
 import org.openprojectx.bigdata.test.core.ContainerLogMode
 import org.openprojectx.bigdata.test.junit5.BigDataTest
+import java.net.URI
+import java.net.http.HttpClient
+import java.net.http.HttpRequest
+import java.net.http.HttpResponse
+import java.nio.charset.StandardCharsets
+import java.nio.file.Files
+import java.time.Duration
+import java.util.Properties
 
 @BigDataTest(
     hdfs = true,
@@ -18,11 +37,11 @@ import org.openprojectx.bigdata.test.junit5.BigDataTest
     schemaRegistry = true,
     localStackS3 = true,
     fakeGcs = true,
-    containerLogMode = ContainerLogMode.FILE
+    containerLogMode = ContainerLogMode.FILE,
 )
 class SparkBigDataTestExample {
     @Test
-    fun connectsSparkToContainerServices(kit: BigDataTestKit) {
+    fun writesAvroKafkaEventsToIcebergOnObjectStorage(kit: BigDataTestKit) {
         val hdfs = kit.endpoint(BigDataService.HDFS)
         val hiveMetastore = kit.endpoint(BigDataService.HIVE_METASTORE)
         val kafka = kit.endpoint(BigDataService.KAFKA)
@@ -30,41 +49,210 @@ class SparkBigDataTestExample {
         val s3 = kit.endpoint(BigDataService.LOCALSTACK_S3)
         val gcs = kit.endpoint(BigDataService.FAKE_GCS)
 
-        val warehouseDir = Files.createTempDirectory("bigdata-test-spark-warehouse-").toUri().toString()
-        val spark = SparkSession.builder()
+        val runId = System.nanoTime().toString()
+        val topic = "spark-avro-events-$runId"
+        val s3Bucket = "spark-iceberg-s3-$runId"
+        val gcsBucket = "spark-iceberg-gcs-$runId"
+        val hdfsConfigDir = Path("/bigdata-test/spark/$runId")
+        val s3CredentialProviderPath = "jceks://hdfs${hdfsConfigDir}/s3.jceks"
+        createS3Bucket(s3.property("aws.endpoint-url.s3"), s3Bucket)
+        createGcsBucket(gcs.property("google.cloud.storage.host"), gcsBucket)
+        createS3CredentialProvider(
+            hdfsUri = hdfs.property("fs.defaultFS"),
+            configDir = hdfsConfigDir,
+            providerPath = s3CredentialProviderPath,
+            accessKey = s3.property("aws.accessKeyId"),
+            secretKey = s3.property("aws.secretAccessKey"),
+        )
+        produceAvroEvents(
+            bootstrapServers = kafka.property("bootstrap.servers"),
+            schemaRegistryUrl = schemaRegistry.property("schema.registry.url"),
+            topic = topic,
+        )
+
+        sparkSession(
+            hdfsUri = hdfs.property("fs.defaultFS"),
+            hiveMetastoreUri = hiveMetastore.property("hive.metastore.uris"),
+            s3Endpoint = s3.property("aws.endpoint-url.s3"),
+            s3CredentialProviderPath = s3CredentialProviderPath,
+            s3Bucket = s3Bucket,
+            gcsEndpoint = gcs.property("google.cloud.storage.host"),
+            gcsBucket = gcsBucket,
+        ).use { spark ->
+            assertHdfsConfigStore(spark, hdfs.property("fs.defaultFS"), hdfsConfigDir)
+            assertKafkaAvroInput(spark, kafka.property("bootstrap.servers"), topic)
+            assertIcebergTable(spark, catalog = "s3", namespace = "demo_$runId", table = "events_s3", storageName = "s3")
+            assertIcebergTable(
+                spark,
+                catalog = "gcs_local",
+                namespace = "demo_$runId",
+                table = "events_gcs",
+                storageName = "gcs",
+                dataPath = "gs://$gcsBucket/data/demo_$runId/events_gcs",
+            )
+        }
+    }
+
+    private fun sparkSession(
+        hdfsUri: String,
+        hiveMetastoreUri: String,
+        s3Endpoint: String,
+        s3CredentialProviderPath: String,
+        s3Bucket: String,
+        gcsEndpoint: String,
+        gcsBucket: String,
+    ): SparkSession =
+        SparkSession.builder()
             .appName("bigdata-test-spark-example")
             .master("local[2]")
             .config("spark.ui.enabled", "false")
-            .config("spark.sql.warehouse.dir", warehouseDir)
-            .config("hive.metastore.uris", hiveMetastore.property("hive.metastore.uris"))
-            .config("spark.hadoop.fs.defaultFS", hdfs.property("fs.defaultFS"))
-            .config("spark.hadoop.fs.s3a.endpoint", s3.property("aws.endpoint-url.s3"))
-            .config("spark.hadoop.fs.s3a.access.key", s3.property("aws.accessKeyId"))
-            .config("spark.hadoop.fs.s3a.secret.key", s3.property("aws.secretAccessKey"))
+            .config("spark.driver.extraJavaOptions", "--add-opens=java.base/java.nio=ALL-UNNAMED")
+            .config("spark.executor.extraJavaOptions", "--add-opens=java.base/java.nio=ALL-UNNAMED")
+            .config("spark.sql.extensions", "org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions")
+            .config("spark.sql.catalog.s3", "org.apache.iceberg.spark.SparkCatalog")
+            .config("spark.sql.catalog.s3.type", "hadoop")
+            .config("spark.sql.catalog.s3.warehouse", "s3a://$s3Bucket/warehouse")
+            .config("spark.sql.catalog.gcs_local", "org.apache.iceberg.spark.SparkCatalog")
+            .config("spark.sql.catalog.gcs_local.type", "hadoop")
+            .config("spark.sql.catalog.gcs_local.warehouse", "file:${Files.createTempDirectory("bigdata-test-gcs-iceberg-warehouse-")}")
+            .config("spark.sql.warehouse.dir", "file:${Files.createTempDirectory("bigdata-test-spark-warehouse-")}")
+            .config("hive.metastore.uris", hiveMetastoreUri)
+            .config("spark.hadoop.fs.defaultFS", hdfsUri)
+            .config("spark.hadoop.hadoop.security.credential.provider.path", s3CredentialProviderPath)
+            .config("spark.hadoop.fs.s3a.endpoint", s3Endpoint)
+            .config("spark.hadoop.fs.s3a.aws.credentials.provider", "org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider")
             .config("spark.hadoop.fs.s3a.path.style.access", "true")
             .config("spark.hadoop.fs.s3a.connection.ssl.enabled", "false")
-            .config("spark.hadoop.google.cloud.storage.host", gcs.property("google.cloud.storage.host"))
+            .config("spark.hadoop.fs.gs.impl", "com.google.cloud.hadoop.fs.gcs.GoogleHadoopFileSystem")
+            .config("spark.hadoop.fs.AbstractFileSystem.gs.impl", "com.google.cloud.hadoop.fs.gcs.GoogleHadoopFS")
+            .config("spark.hadoop.fs.gs.project.id", "bigdata-test")
+            .config("spark.hadoop.fs.gs.storage.root.url", "${gcsEndpoint.trimEnd('/')}/")
+            .config("spark.hadoop.fs.gs.storage.service.path", "storage/v1/")
+            .config("spark.hadoop.fs.gs.client.type", "HTTP_API_CLIENT")
+            .config("spark.hadoop.fs.gs.http.connect-timeout", "4000")
+            .config("spark.hadoop.fs.gs.auth.type", "UNAUTHENTICATED")
+            .config("spark.hadoop.fs.gs.create.items.conflict.check.enable", "false")
+            .config("spark.hadoop.fs.gs.implicit.dir.repair.enable", "false")
+            .config("spark.hadoop.fs.gs.hierarchical.namespace.folders.enable", "false")
             .enableHiveSupport()
             .getOrCreate()
 
-        spark.use { session ->
-            FileSystem.get(URI.create(hdfs.property("fs.defaultFS")), session.sparkContext().hadoopConfiguration())
-                .use { fs -> check(fs.exists(Path("/"))) }
+    private fun assertHdfsConfigStore(spark: SparkSession, hdfsUri: String, configDir: Path) {
+        FileSystem.get(URI.create(hdfsUri), spark.sparkContext().hadoopConfiguration())
+            .use { fs -> check(fs.exists(Path(configDir, "s3.jceks"))) }
+    }
 
-            session.sql("CREATE DATABASE IF NOT EXISTS bigdata_test_example")
-            session.sql("CREATE TABLE IF NOT EXISTS bigdata_test_example.spark_smoke (id INT, name STRING) USING parquet")
-            session.sql("INSERT INTO bigdata_test_example.spark_smoke VALUES (1, 'spark')")
-            session.table("bigdata_test_example.spark_smoke").show(false)
+    private fun assertKafkaAvroInput(spark: SparkSession, bootstrapServers: String, topic: String) {
+        val rows = spark.read()
+            .format("kafka")
+            .option("kafka.bootstrap.servers", bootstrapServers)
+            .option("subscribe", topic)
+            .option("startingOffsets", "earliest")
+            .option("endingOffsets", "latest")
+            .load()
+        check(rows.count() == 2L) { "Expected two Avro Kafka records in $topic" }
+    }
 
-            val kafkaReader = session.read()
-                .format("kafka")
-                .option("kafka.bootstrap.servers", kafka.property("bootstrap.servers"))
-                .option("subscribe", "spark-smoke")
-                .option("startingOffsets", "earliest")
-                .option("endingOffsets", "latest")
+    private fun assertIcebergTable(
+        spark: SparkSession,
+        catalog: String,
+        namespace: String,
+        table: String,
+        storageName: String,
+        dataPath: String? = null,
+    ) {
+        val identifier = "$catalog.$namespace.$table"
+        spark.sql("CREATE NAMESPACE IF NOT EXISTS $catalog.$namespace")
+        val tableProperties = dataPath?.let { " TBLPROPERTIES ('write.data.path'='$it')" }.orEmpty()
+        spark.sql(
+            """
+            CREATE TABLE $identifier (
+                id INT,
+                name STRING,
+                storage STRING
+            ) USING iceberg$tableProperties
+            """.trimIndent(),
+        )
+        spark.sql("INSERT INTO $identifier VALUES (1, 'alpha', '$storageName'), (2, 'beta', '$storageName')")
+        val count = spark.table(identifier).where("storage = '$storageName'").count()
+        check(count == 2L) { "Expected two Iceberg rows in $identifier" }
+    }
 
-            println("Configured Spark Kafka reader: $kafkaReader")
-            println("Schema Registry: ${schemaRegistry.property("schema.registry.url")}")
+
+    private fun createS3CredentialProvider(
+        hdfsUri: String,
+        configDir: Path,
+        providerPath: String,
+        accessKey: String,
+        secretKey: String,
+    ) {
+        val conf = Configuration(false)
+        conf.set("fs.defaultFS", hdfsUri)
+        conf.set(CredentialProviderFactory.CREDENTIAL_PROVIDER_PATH, providerPath)
+        FileSystem.get(URI.create(hdfsUri), conf).use { fs -> fs.mkdirs(configDir) }
+        val provider = CredentialProviderFactory.getProviders(conf).single()
+        provider.createCredentialEntry("fs.s3a.access.key", accessKey.toCharArray())
+        provider.createCredentialEntry("fs.s3a.secret.key", secretKey.toCharArray())
+        provider.flush()
+    }
+
+    private fun produceAvroEvents(bootstrapServers: String, schemaRegistryUrl: String, topic: String) {
+        AdminClient.create(mapOf(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG to bootstrapServers)).use { admin ->
+            try {
+                admin.createTopics(listOf(NewTopic(topic, 1, 1))).all().get()
+            } catch (ex: Exception) {
+                if (ex.cause !is TopicExistsException) throw ex
+            }
+        }
+
+        val schema = Schema.Parser().parse(
+            """
+            {
+              "type": "record",
+              "name": "SparkEvent",
+              "namespace": "org.openprojectx.bigdata.test.example.spark",
+              "fields": [
+                {"name": "id", "type": "int"},
+                {"name": "name", "type": "string"}
+              ]
+            }
+            """.trimIndent(),
+        )
+        val props = Properties().apply {
+            put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, bootstrapServers)
+            put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer::class.java.name)
+            put(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, KafkaAvroSerializer::class.java.name)
+            put("schema.registry.url", schemaRegistryUrl)
+        }
+        KafkaProducer<String, GenericRecord>(props).use { producer ->
+            listOf("alpha", "beta").forEachIndexed { index, name ->
+                val record = GenericData.Record(schema).apply {
+                    put("id", index + 1)
+                    put("name", name)
+                }
+                producer.send(ProducerRecord(topic, name, record)).get()
+            }
+            producer.flush()
         }
     }
+
+    private fun createS3Bucket(endpoint: String, bucket: String) {
+        val request = HttpRequest.newBuilder(URI.create("$endpoint/$bucket"))
+            .timeout(Duration.ofSeconds(10))
+            .PUT(HttpRequest.BodyPublishers.noBody())
+            .build()
+        val response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.discarding())
+        check(response.statusCode() in setOf(200, 409)) { "Failed to create S3 bucket $bucket: HTTP ${response.statusCode()}" }
+    }
+
+    private fun createGcsBucket(endpoint: String, bucket: String) {
+        val request = HttpRequest.newBuilder(URI.create("$endpoint/storage/v1/b?project=bigdata-test"))
+            .timeout(Duration.ofSeconds(10))
+            .header("Content-Type", "application/json")
+            .POST(HttpRequest.BodyPublishers.ofString("""{"name":"$bucket"}""", StandardCharsets.UTF_8))
+            .build()
+        val response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.discarding())
+        check(response.statusCode() in setOf(200, 201, 409)) { "Failed to create GCS bucket $bucket: HTTP ${response.statusCode()}" }
+    }
+
 }
